add nitipoom profile

--- a/index.html
+++ b/index.html
@@ -828,8 +828,8 @@
                     <div class="col wow animate__fadeIn" data-wow-delay="0.8s">
                         <div class="feature-box">
                             <div class="feature-box-icon margin-30px-bottom md-margin-30px-bottom">
-                                <img class="rounded-circle w-200px h-200px border-all border-width-1px border-dashed border-color-medium-gray padding-10px-all"
-                                    src="https://via.placeholder.com/337x337" alt="">
+                                <img class="rounded-circle w-200px h-200px border-all border-width-1px border-dashed border-color-medium-gray padding-10px-all object-cover"
+                                    src="images/nitipoom_aumpitak.png" alt="">
                             </div>
                             <div class="feature-box-content last-paragraph-no-margin">
                                 <span
