add arty and change color

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                 <!-- MAIN IMAGE -->
                                 <img src="images/home-branding-agency-bg-img-03.png" alt=""
                                     data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat"
-                                    data-bgcolor="#1F1714" data-bgparallax="off" class="rev-slidebg" data-no-retina />
+                                    data-bgcolor="#181D27" data-bgparallax="off" class="rev-slidebg" data-no-retina />
 
                                 <!-- gradient line layer -->
                                 <div class="tp-caption tp-resizeme" data-frames='[{"delay": 500, "speed": 300, "from": "opacity: 0", "to": "opacity: 1"},
@@ -239,7 +239,7 @@
         </section>
         <!-- end section -->
         <!-- start section -->
-        <section class="big-section bg-light-gray" id="project">
+        <section class="big-section bg-aute" id="project">
             <div class="container">
                 <div class="row justify-content-center">
                     <div
@@ -247,7 +247,7 @@
                         <span
                             class="alt-font font-weight-500 text-medium-gray text-uppercase d-block margin-10px-bottom letter-spacing-1px">Project
                             usage flow</span>
-                        <h4 class="alt-font font-weight-600 text-extra-dark-gray letter-spacing-minus-2px mb-0">
+                        <h4 class="alt-font font-weight-600 text-white letter-spacing-minus-2px mb-0">
                             Designed for AU Student
                         </h4>
                     </div>
@@ -829,7 +829,7 @@
                         <div class="feature-box">
                             <div class="feature-box-icon margin-30px-bottom md-margin-30px-bottom">
                                 <img class="rounded-circle w-200px h-200px border-all border-width-1px border-dashed border-color-medium-gray padding-10px-all object-cover"
-                                    src="images/nitipoom_aumpitak.png" alt="">
+                                    src="images/nitipoom_aumpitak.png" alt="Nitipoom Aumpitak">
                             </div>
                             <div class="feature-box-content last-paragraph-no-margin">
                                 <span
@@ -845,7 +845,7 @@
                         <div class="feature-box">
                             <div class="feature-box-icon margin-30px-bottom md-margin-30px-bottom">
                                 <img class="rounded-circle w-200px h-200px border-all border-width-1px border-dashed border-color-medium-gray padding-10px-all"
-                                    src="images/jan_poonthong.png" alt="">
+                                    src="images/jan_poonthong.png" alt="Jan Poonthong">
                             </div>
                             <div class="feature-box-content last-paragraph-no-margin">
                                 <span
@@ -877,7 +877,7 @@
                         <div class="feature-box">
                             <div class="feature-box-icon margin-30px-bottom md-margin-30px-bottom">
                                 <img class="rounded-circle w-200px h-200px border-all border-width-1px border-dashed border-color-medium-gray padding-10px-all"
-                                    src="images/bhurichaya_thuraphan.png" alt="">
+                                    src="images/bhurichaya_thuraphan.png" alt="Bhurichaya Thuraphan">
                             </div>
                             <div class="feature-box-content last-paragraph-no-margin">
                                 <span
@@ -893,12 +893,12 @@
                         <div class="feature-box">
                             <div class="feature-box-icon margin-30px-bottom md-margin-30px-bottom">
                                 <img class="rounded-circle w-200px h-200px border-all border-width-1px border-dashed border-color-medium-gray padding-10px-all"
-                                    src="https://via.placeholder.com/337x337" alt="">
+                                    src="images/watcharavin_rojjanavisut.png" alt="Watcharavin Rojjanavisut">
                             </div>
                             <div class="feature-box-content last-paragraph-no-margin">
                                 <span
-                                    class="text-dark-purple d-inline-block font-weight-500 alt-font margin-5px-bottom">Arty
-                                    ...</span>
+                                    class="text-dark-purple d-inline-block font-weight-500 alt-font margin-5px-bottom">Watcharavin
+                                    Rojjanavisut</span>
                                 <p class="mx-auto xs-w-75">Designer</p>
                             </div>
                         </div>
